Bug fix - add minimum height attribute to all showcases images so that they appear on smaller screen sizes (1024px <).

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ header.intro {
 #showcase .showcase-image {
   background-image: url('https://placekitten.com/1200/1000');
   background-size: cover;
+  min-height: 30rem;
 }
 
 #showcase .showcase-text {
